<resources>
    <string name="app_name">OurTour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendor_firm">Vendor Firm Name</string>
    <string name="email">e-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="registration_Number">Firm Registration Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_acc_no">Bank A/c No</string>
    <string name="branch">Branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="area_name">Area Name</string>
    <string name="guarage_name">Garage Name</string>
    <string name="district">District</string>
    <string name="vendor_type">Vendor Type</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="kms_price">Km\'s Price</string>
    <string name="seaters">Seaters</string>
    <string name="vehicle_reg_number">Vehicle Register Number</string>
    <string name="reg_date">Reg Date</string>
    <string name="exp_date">Exp Date</string>
    <string name="permit_number">Permit Number</string>
    <string name="fitness_number">Fitness Number</string>
    <string name="insurence_number">Insurance Number</string>
    <string name="pollution_number">Pollution Number</string>
    <string name="driver_owner_name">Driver/Owner Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="ok">OK</string>
    <string name="you_vehicle_added_successfully">Your vehicle added \n successfully</string>
    <string name="tour_packages">Tour Packages</string>
    <string name="extra_km_charge">Extra km charge</string>
    <string name="ac_price">AC Price</string>
    <string name="non_ac_price">NON AC price</string>
    <string name="driver_batta">Driver batta</string>
    <string name="per_km_ac_amount">Per km AC amount</string>
    <string name="per_km_non_ac_amount">Per km Non AC amount</string>
    <string name="base_price_ac">Base AC Price</string>
    <string name="base_price_non_ac">Base Non AC Price</string>
    <string name="extra_km_ac">Extra km AC</string>
    <string name="extra_km_non_ac">Extra km Non AC</string>
    <string name="extra_hr_ac">Extra hr AC</string>
    <string name="extra_hr_non_ac">Extra hr Non AC</string>
    <string name="airport_drop_ac">Airport drop AC</string>
    <string name="airport_drop_non_ac">Airport drop Non AC</string>
    <string name="airport_pick_ac">Airport pick up AC</string>
    <string name="airport_pick_non_ac">Airport pick up Non AC</string>
    <string name="txt_hoem">Home</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_contact_us">Contact us</string>
    <string name="txt_follow_us">Follow us</string>
    <string name="txt_term_conditions">Term and conditions</string>
    <string name="txt_disclaimer">Disclaimer</string>
    <string name="txt_help">Help</string>
    <string name="txt_add_your_car">Add your car</string>
    <string name="txt_home_content">Loerm Ompusm is simply dummy text of printing and typesetting industry. Loerm Impusm has been the industry\'s standerd dummy text ever sinse 1500s when an unknown printer took a galley of type and scrambled it to make \type specimen it has servived not only five countries but also the leap into \n\n scrambled it to make \type specimen it has servived not only five countries but also the leap into </string>
    <string name="txt_vendor_registration">VENDOR REGISTRATION</string>
    <string name="txt_vendor_price">VENDOR \nPRICE  </string>
    <string name="txt_vehicle_registration">VEHICLE REGISTRATION</string>
    <string name="txt_vehicla_make">Vehicle Make</string>
    <string name="txt_vehicla_model">Vehicle Model</string>
    <string name="txt_vehicle_reg_num">Vehicle Reg Number</string>
    <string name="other">Other</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>
    <string name="please_wait">Please Wait</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_entered_details_are_correct">Are you sure entered vendor details are correct</string>
    <string name="are_you_sure_entered_details_vehicle_are_correct">Are you sure entered vehicle details are correct</string>
    <string name="vendor_id">VENDOR ID</string>
    <string name="vendor_id_number">VT0001</string>
    <string name="if_entered_data_is_correct_our_verification_team_will_reach_you">If Entered Data is Correct our verification team will reach you</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="contact_phone">9247103736</string>
    <string name="contact_site">www.ourtour.in</string>
    <string name="contact_mail">daduvainaveenkumar@gmail.com</string>
    <string name="contact_address"> 202, 2nd floor, Shashirekha apartment, thirumalghery, thirumalghery X roads, Secundrabad, TS 500015</string>
    <string name="disclaimer">\t\t\t\t\t\t\t\tThe customer agrees and acknowledges that the use of the Mobile App/Website is at the sole risk of the customer and that Company disclaims all representations and warranties of any kind, whether express or implied as to condition, suitability, quality and fitness for any purposes are excluded to the fullest extent permitted by law.

\n\n\t\t\t\t\t\t\t\tThe information contained in this Website / Application is for general information purposes only. The information is provided by Our Tour and while we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the Mobileapp or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.

\n\n\t\t\t\t\t\t\t\tIn no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arise out of, or in connection with, the use of this Mobileapp.

\n\n\t\t\t\t\t\t\t\tThrough this Mobileapp you are able to link to other Mobileapps which are not under the control of OurTour. We have no control over the nature, content and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them.

\n\n\t\t\t\t\t\t\t\tEvery effort is made to keep the Mobile Application/ Website up and running smoothly. However, OurTour takes no responsibility for, and will not be liable for, the Mobile Application/ Website being temporarily unavailable due to technical issues beyond our control.</string>
    <string name="about_us">\t1.       OurTour, India\'s most popular mobile app for Outstation transportation, integrates Nation transportation for customers and driver partners on mobile platform.

\n\n\t2.     	As one of India\'s fastest growing companies we ensure convenient, transparent and quick service fulfillment using technology to make transportation hassle free for everyone.

\n\n\t3.       OurTour offerings on its platform ranges from affordable AC, Non AC Vehicles on using the ourTour mobile app, users can conveniently book vehicles available to them.

\n\n\t4.       We\'ve empowered hundreds of thousands of vendor-partners as entrepreneurs, by building an service providers. They are increase their income on the ourTour platform.

\n\n\t5.       We ourTour hereby proudly introduce ourselves as one of the car &quot; coach rental company in providing all type of car &quot; coach rental services and had left a smile on our customer\'s heart with our prompt service and reasonable rates. ourTour is Car and coach rental for families, Corporate and Government Institutions.

\n\n\t6.       Our business Car Rental ourTour is driven by the fundamental need of ensuring safe and secure transport for our customers. Year after year, our clients have shown faith in us owing to our punctual service, friendly support staff, trained chauffeurs, and well maintained fleet of cars.

\n\n\t7.     For families, Car Rental ourTour offer cheapest rents, are it a short trip or long. To the individual and family travelers Car Rental ourTour offer the safety and comfort most desired. Our Corporate customers find great cost savings through our customized package deals. Our in-depth knowledge of India and best routes helps in cutting down the time to commute drastically.</string>
</resources>