<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@android:color/transparent"
        android:gravity="top">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_submit"
            android:background="@android:color/transparent">

            <LinearLayout
                android:id="@+id/ll_vendor_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_vehicle_make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/down_arrow"
                    android:focusable="false"
                    android:hint="@string/vehicle_make"
                    android:inputType="textNoSuggestions"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/et_seaters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/down_arrow"
                    android:focusable="false"
                    android:hint="@string/seaters"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/et_tour_packages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/down_arrow"
                    android:focusable="false"
                    android:hint="@string/tour_packages"
                    android:inputType="textNoSuggestions"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/per_km_ac_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/per_km_ac_amount"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/per_km_non_ac_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/per_km_non_ac_amount"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/driver_batta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driver_batta"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/base_price_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base_price_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/base_price_non_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base_price_non_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/extra_km_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_km_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/extra_km_non_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_km_non_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/extra_hr_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_hr_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/extra_hr_non_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_hr_non_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/airport_drop_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/airport_drop_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/airport_drop_non_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/airport_drop_non_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/airport_pick_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/airport_pick_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/airport_pick_non_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/airport_pick_non_ac"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/et_driver_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driver_owner_name"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/twenty_sp" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/home_image"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/twenty_sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/car_icon_gray" />

</RelativeLayout>
